1-重构了源码目录结构 2-增加了filter目录，以方便封装libav的filter接口 3-异常处理会以异常的形式抛出，尽量避免数据返回与错误返回相混淆

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,14 @@ project(decode_audio)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_VERBOSE_MAKEFILE on)
 
-set(SOURCE_FILES LibAVInputFileAudio.cpp LibAVInputFileAudio.h LibAVOutputFileAudio.cpp LibAVOutputFileAudio.h TransCodeAAC.cpp TransCodeAAC.h decode_audio.c.cpp LibAVDecoder.cpp LibAVDecoder.h)
+set(SOURCE_FILES
+        decode_audio.c.cpp
+        LibAVDecoder.cpp
+        LibAVDecoder.h
+        jmedia/Reader.cpp
+        jmedia/Reader.h
+        jmedia/Decoder.cpp
+        jmedia/Decoder.h
+        jmedia/Error.h jmedia/Filter/FilterGraph.cpp jmedia/Filter/FilterGraph.h jmedia/Filter/FilterConfig.h jmedia/Filter/FilterConfig_abuffer.cpp jmedia/Filter/FilterConfig_abuffer.h)
 add_executable(decode_audio ${SOURCE_FILES})
 target_link_libraries(decode_audio avformat avcodec avutil avdevice avfilter avresample pthread)
