重构reader 增加format reader audio reader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ set(SOURCE_FILES
         decode_audio.c.cpp
         LibAVDecoder.cpp
         LibAVDecoder.h
-        jmedia/Reader.cpp
-        jmedia/Reader.h
+        jmedia/FormatReader.cpp
+        jmedia/FormatReader.h
         jmedia/Decoder.cpp
         jmedia/Decoder.h
-        jmedia/Error.h jmedia/Filter/FilterGraph.cpp jmedia/Filter/FilterGraph.h jmedia/Filter/FilterConfig.h jmedia/Filter/FilterConfig_abuffer.cpp jmedia/Filter/FilterConfig_abuffer.h jmedia/Filter/FilterConfig_abuffersink.cpp jmedia/Filter/FilterConfig_abuffersink.h jmedia/Filter/FilterConfig.cpp jmedia/Filter/FilterConfig_aformat.cpp jmedia/Filter/FilterConfig_aformat.h)
+        jmedia/Error.h jmedia/Filter/FilterGraph.cpp jmedia/Filter/FilterGraph.h jmedia/Filter/FilterConfig.h jmedia/Filter/FilterConfig_abuffer.cpp jmedia/Filter/FilterConfig_abuffer.h jmedia/Filter/FilterConfig_abuffersink.cpp jmedia/Filter/FilterConfig_abuffersink.h jmedia/Filter/FilterConfig.cpp jmedia/Filter/FilterConfig_aformat.cpp jmedia/Filter/FilterConfig_aformat.h jmedia/AudioReader.cpp jmedia/AudioReader.h jmedia/base.h jmedia/Reader.h)
 add_executable(decode_audio ${SOURCE_FILES})
 target_link_libraries(decode_audio avformat avdevice avfilter avcodec  avutil swscale swresample pthread z dl)
