--- a/doc/examples/CMakeLists.txt
+++ b/doc/examples/CMakeLists.txt
@@ -13,7 +13,6 @@ target_link_libraries(read_metadata avformat avdevice avfilter avcodec  avutil s
 add_executable(video_in_video video_in_video.cpp)
 target_link_libraries(video_in_video avformat avdevice avfilter avcodec  avutil swscale swresample jmedia)
 
-
 set_target_properties(
 	video_watermark
 	decode_media
@@ -33,32 +32,32 @@ add_custom_command(
 	scale_video
 	read_metadata
 	POST_BUILD
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/thrd/ffmpeg/bin/avcodec-57.dll ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/thrd/ffmpeg/bin/avdevice-57.dll ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/thrd/ffmpeg/bin/avfilter-6.dll ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/thrd/ffmpeg/bin/avformat-57.dll ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/thrd/ffmpeg/bin/avutil-55.dll ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/thrd/ffmpeg/bin/postproc-54.dll ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/thrd/ffmpeg/bin/swresample-2.dll ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/thrd/ffmpeg/bin/swscale-4.dll ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/doc/logo.png ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/doc/test.jpg ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/doc/video.mov ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/thrd/ffmpeg/bin/avcodec-57.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/thrd/ffmpeg/bin/avdevice-57.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/thrd/ffmpeg/bin/avfilter-6.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/thrd/ffmpeg/bin/avformat-57.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/thrd/ffmpeg/bin/avutil-55.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/thrd/ffmpeg/bin/postproc-54.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/thrd/ffmpeg/bin/swresample-2.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/thrd/ffmpeg/bin/swscale-4.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/doc/logo.png ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/doc/test.jpg ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
+	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/doc/video.mov ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}
 	VERBATIM	
 )
 
 #decode
 add_test(
 	test_decode_picture
-	decode_media.exe ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/test.jpg
+	decode_media.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/test.jpg
 )
 add_test(
 	test_decode_video
-	decode_media.exe ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/video.mov
+	decode_media.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/video.mov
 )
 add_test(
 	test_decode_badfile
-	decode_media.exe ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/avdevice-57.dll
+	decode_media.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/avdevice-57.dll
 )
 set_tests_properties(
 	test_decode_badfile
@@ -69,27 +68,27 @@ set_tests_properties(
 #watermask
 add_test(
 	test_jpg_add_watermark
-	video_watermark.exe ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/test.jpg ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/logo.png
+	video_watermark.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/test.jpg ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/logo.png
 )
 add_test(
 	test_video_add_watermark
-	video_watermark.exe ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/video.mov ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/logo.png
+	video_watermark.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/video.mov ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/logo.png
 )
 
 #scale
 add_test(
 	test_video_scale_picture
-	scale_video.exe ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/test.jpg 500 700 yuv
+	scale_video.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/test.jpg 500 700 yuv
 )
 add_test(
 	test_scale_picture
-	scale_video.exe ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/test.jpg 555 333 bmp
+	scale_video.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/test.jpg 555 333 bmp
 )
 add_test(
 	test_scale_picture2
-	scale_video.exe ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/test.jpg 555 333 yuv
+	scale_video.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/test.jpg 555 333 yuv
 )
 add_test(
 	test_scale_video
-	scale_video.exe ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/video.mov 500 700 yuv
+	scale_video.exe ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/video.mov 500 700 yuv
 )
