Signed-off-by: jinzhao <jinzhao@163.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,19 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 set(ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
+# output dir
+if (NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/BINS)
+endif()
+
+if(NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/BINS)
+endif()
+
+if(NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/LIBS)
+endif()
+
 
 ## ffmpeg
 if (NOT FFMPEG_LIBS_DIR)
