增加打开超时 增加画框滤镜，画文字滤镜
Signed-off-by: jinzhao <jinzhao@163.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,7 +119,8 @@ set(
   jmedia/filter/video/filter_ascii_movie.cpp
   jmedia/filter/video/filter_ascii_overlay.cpp
   jmedia/filter/video/filter_ascii_drawbox.cpp
-
+  jmedia/filter/video/filter_ascii_crop.cpp
+  jmedia/filter/video/filter_ascii_drawtext.cpp
 
 
   )
