--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,18 @@ project(jmedia)
 #set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_VERBOSE_MAKEFILE on)
 
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Release)
-endif()
-set(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE})
+
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE CACHE BOOL "export windows symbols")
+#if(NOT CMAKE_BUILD_TYPE)
+  #set(CMAKE_BUILD_TYPE Release)
+#endif()
+#set(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE})
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 set(ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
+
+include_directories(${ROOT_PATH})
 
 # output dir
 if (NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
@@ -25,6 +29,14 @@ endif()
 if(NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
     set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/LIBS)
 endif()
+
+set(FFMPEG_LIBS_DIR "" CACHE PATH "ffmpeg lib dir")
+set(FFMPEG_INCLUDE_DIR "" CACHE PATH "ffmpeg include dir")
+set(FFMPEG_BINS_DIR "" CACHE PATH "ffmpeg bin dir")
+
+set(JMEDIA_DISABLE_JMEDIA_TEST TRUE CACHE BOOL "enable unit test or not")
+set(JMEDIA_BUILD_JMEDIA_EXAMPLE FALSE CACHE BOOL "build example or not")
+set(JMEDIA_BUILD_INSTALL_TARGETS FALSE CACHE BOOL "install jmedia or not")
 
 
 ## ffmpeg
@@ -66,12 +78,13 @@ include_directories(
   jmedia/resampler
   jmedia/scaler
   jmedia/filter
+  jmedia/writer
   )
 
 
 
 set(source_base
-  jmedia/Error.h
+  jmedia/error.h
   jmedia/base.h
   )
 source_group(base FILES ${source_base})
@@ -81,8 +94,8 @@ set(
   jmedia/format/format_reader.cpp
   jmedia/format/format_reader.h
   jmedia/format/reader.h
-  #jmedia/format/format_writer.h
-  #jmedia/format/format_writer.cpp
+  jmedia/format/format_writer.h
+  jmedia/format/format_writer.cpp
 
   )
 source_group(format FILES ${source_format})
@@ -91,6 +104,8 @@ set(
   source_codec
   jmedia/codec/decoder.cpp
   jmedia/codec/decoder.h
+  jmedia/codec/encoder.cpp
+  jmedia/codec/encoder.h
   )
 source_group(codec FILES ${source_codec})
 
@@ -149,6 +164,7 @@ set(
 source_group(resampler FILES ${source_resampler})
 
 
+
 set(SOURCE_FILES
   ${source_base}
   ${source_format}
@@ -168,11 +184,50 @@ SET (CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} /SAFESEH:NO")
 
 add_library(jmedia ${SOURCE_FILES})
 target_compile_definitions(jmedia PUBLIC  "_CRT_SECURE_NO_WARNINGS" "__STDC_LIMIT_MACROS" "__STDC_CONSTANT_MACROS ")
-target_link_libraries(jmedia avformat avdevice avfilter avcodec  avutil swscale swresample)
+target_link_libraries(jmedia PUBLIC
+  avformat avdevice avfilter avcodec  avutil swscale swresample winmm)
 
-if (NOT DISABLE_JMEDIA_TEST)
+set_target_properties(
+  jmedia
+  PROPERTIES
+  FOLDER
+  "jmedia"
+  )
+
+if (NOT JMEDIA_DISABLE_JMEDIA_TEST)
   add_subdirectory(test)
 endif()
-if (BUILD_JMEDIA_EXAMPLE)
+
+if (JMEDIA_BUILD_JMEDIA_EXAMPLE)
   add_subdirectory(doc/examples)
+endif()
+
+if (JMEDIA_BUILD_INSTALL_TARGETS)
+    if(CMAKE_SIZEOF_VOID_P STREQUAL 4)
+        set(platform x86)
+    else()
+        set(platform x64)
+    endif()
+
+    install(TARGETS jmedia
+        CONFIGURATIONS RelWithDebInfo
+        ARCHIVE DESTINATION lib/static.${platform}.RelWithDebInfo
+        LIBRARY DESTINATION lib/${platform}.RelWithDebInfo
+        RUNTIME DESTINATION bin/${platform}.RelWithDebInfo)
+
+    install(TARGETS jmedia
+        CONFIGURATIONS Debug
+        ARCHIVE DESTINATION lib/static.${platform}.Debug
+        LIBRARY DESTINATION lib/${platform}.Debug
+        RUNTIME DESTINATION bin/${platform}.Debug)
+
+    install(TARGETS jmedia
+        CONFIGURATIONS Release
+        ARCHIVE DESTINATION lib/static.${platform}.Release
+        LIBRARY DESTINATION lib/${platform}.Release
+        RUNTIME DESTINATION bin/${platform}.Release)
+
+    install(DIRECTORY jmedia
+        DESTINATION include
+        FILES_MATCHING PATTERN "*.h")
 endif()
