--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,17 +1,16 @@
 add_executable(jmedia_test reader_test.cpp)
-target_link_libraries(jmedia_test 
-	avformat 
-	avdevice 
-	avfilter 
-	avcodec  
-	avutil 
-	swscale 
-	swresample 
-	jmedia 
-	gtest
+target_link_libraries(jmedia_test
+	avformat
+	avdevice
+	avfilter
+	avcodec
+	avutil
+	swscale
+	swresample
+	jmedia
+	gtest_main
 )
 
-set_target_properties(jmedia_test PROPERTIES FOLDER "test")
 
 
 add_executable(
@@ -19,33 +18,37 @@ add_executable(
 	video_filter_chan.cpp
 	)
 target_link_libraries(video_filter_chan
-	avformat 
-	avdevice 
-	avfilter 
-	avcodec  
-	avutil 
-	swscale 
-	swresample 
-	jmedia 
-	gtest
+	avformat
+	avdevice
+	avfilter
+	avcodec
+	avutil
+	swscale
+	swresample
+	jmedia
+	gtest_main
 )
-set_target_properties(video_filter_chan PROPERTIES FOLDER "test")
-
 add_executable(video_filter_ascii_test video_filter_ascii_test.cpp)
-target_link_libraries(video_filter_ascii_test 
-	avformat 
-	avdevice 
-	avfilter 
-	avcodec  
-	avutil 
-	swscale 
-	swresample 
-	jmedia 
-	gtest
+target_link_libraries(video_filter_ascii_test
+	avformat
+	avdevice
+	avfilter
+	avcodec
+	avutil
+	swscale
+	swresample
+	jmedia
+	gtest_main
     Winmm
 )
 
-set_target_properties(video_filter_ascii_test PROPERTIES FOLDER "test")
+set_target_properties(
+  video_filter_chan
+  jmedia_test
+  video_filter_ascii_test
+
+  PROPERTIES FOLDER
+  "jmedia/test")
 
 
 add_custom_command(
@@ -65,16 +68,13 @@ add_custom_command(
 	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/doc/logo.png ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
 	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/doc/test.jpg ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
 	COMMAND ${CMAKE_COMMAND} -E copy ${ROOT_PATH}/doc/video.mov ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-	VERBATIM	
+	VERBATIM
 )
 
 include(GoogleTest)
 gtest_add_tests(
 	TARGET      jmedia_test video_filter_ascii_test
-	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
 )
 gtest_add_tests(
 	TARGET      video_filter_ascii_test
-	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
 )
-
